--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main class="container">
       <video class="movie">
-        <source src="./assets/BigBuckBunny.mp4" />
+        <source src="https://ia800201.us.archive.org/12/items/BigBuckBunny_328/BigBuckBunny_512kb.mp4" />
       </video>
 
       <button id="playButton">Play/Pause</button>
