Se agregó funcionalidad a mute al media player, explicación de this y Call, Apply & bind

--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -11,6 +11,8 @@
     <ol>
         <li><a href="scope.html">Scope</a></li>
         <li><a href="closures.html">Closures</a></li>
+        <li><a href="this.html">this</a></li>
+        <li><a href="call-apply-bind.html">Call, Apply & Bind</a></li>
     </ol>
 </body>
 </html>
