--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <source src="https://ia800201.us.archive.org/12/items/BigBuckBunny_328/BigBuckBunny_512kb.mp4" />
       </video>
 
-      <button id="playButton">Play/Pause</button>
+      <button id="playButton" >Play/Pause</button>
+      <button id="muteButton" >Unmute/Mute</button>
     </main>
 
     <script type="module" src="./assets/index.js"></script>
