Explicación y ejercicios de prototipos u objetos

--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -13,6 +13,7 @@
         <li><a href="closures.html">Closures</a></li>
         <li><a href="this.html">this</a></li>
         <li><a href="call-apply-bind.html">Call, Apply & Bind</a></li>
+        <li><a href="prototype.html">Prototype</a></li>
     </ol>
 </body>
 </html>
