--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -14,6 +14,7 @@
         <li><a href="this.html">this</a></li>
         <li><a href="call-apply-bind.html">Call, Apply & Bind</a></li>
         <li><a href="prototype.html">Prototype</a></li>
+        <li><a href="prototypal-inheritance.html">Prototypal Inheritance</a></li>
     </ol>
 </body>
 </html>
